--- a/Diabetes_prediction_Classifictaion.ipynb
+++ b/Diabetes_prediction_Classifictaion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCs5RozoOnRU9at/529HK1",
+      "authorship_tag": "ABX9TyOS6F9U6sXznVILPm7uzefw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cBcsipsEMpGF"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "#**Diabetes Dataset**\n",
@@ -46,11 +37,7 @@
         "on the selection of these instances from a larger database. In particular, all patients here are females\n",
         "at least 21 years old of Pima Indian heritage.2\n",
         "From the data set in the (.csv) File We can find several variables, some of them are independent\n",
-        "(several medical predictor variables) and only one target dependent variable (Outcome).\n",
-        "\n",
-        "##**K-Nearest Neighbor**\n",
-        "K-Nearest Neighbors (KNN) is a simple yet powerful algorithm used in machine learning for classification and regression tasks. It works on the principle of finding the K nearest data points in the feature space and making predictions based on the majority class or the average of the K nearest neighbors. KNN is particularly suitable for applications where the decision boundary is irregular or difficult to define mathematically. Its simplicity and effectiveness make it a popular choice for various predictive modeling tasks, including healthcare diagnostics like diabetes prediction. With proper tuning and feature engineering, KNN can provide accurate and reliable predictions, making it a valuable tool in the arsenal of machine learning practitioners.\n",
-        "\n"
+        "(several medical predictor variables) and only one target dependent variable (Outcome)."
       ],
       "metadata": {
         "id": "yeXlYqus7WxZ"
@@ -2515,7 +2502,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####**K-Nearest Neighbors**"
+        "####**K-Nearest Neighbors**\n",
+        "K-Nearest Neighbors (KNN) is a simple yet powerful algorithm used in machine learning for classification and regression tasks. It works on the principle of finding the K nearest data points in the feature space and making predictions based on the majority class or the average of the K nearest neighbors. KNN is particularly suitable for applications where the decision boundary is irregular or difficult to define mathematically. Its simplicity and effectiveness make it a popular choice for various predictive modeling tasks, including healthcare diagnostics like diabetes prediction. With proper tuning and feature engineering, KNN can provide accurate and reliable predictions, making it a valuable tool in the arsenal of machine learning practitioners."
       ],
       "metadata": {
         "id": "RHqgZ481VqRg"
@@ -2790,7 +2778,7 @@
     {
       "cell_type": "code",
       "source": [
-        "acc_score_dt = accuracy_score(y_test,y_predict_svm)"
+        "acc_score_dt = accuracy_score(y_test,y_predict_dt)"
       ],
       "metadata": {
         "id": "OHJopz8QXM20"
